Fix: font size too big

--- a/flexbox/css/000_basic.css
+++ b/flexbox/css/000_basic.css
@@ -2,7 +2,7 @@ body {
     background-color: steelblue;
     color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     width: 80%;
     margin: 4rem auto;
 }
